Updated author info.

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
 Theme Name:     Gangplank 4
-Theme URI:      http://example.com/
+Theme URI:      http://gangplankhq.com/
 Description:    Gangplank Theme 4.0
-Author:         Jade Meskill
-Author URI:     http://example.com/about/
+Author:         gangplank
+Author URI:     http://gangplankhq.com/about/
 Template:       _straps
-Version:        0.1.0
+Version:        0.1.1
 */
 
 @import url('../_straps/style.css');
